syntax = "proto3";

package api;

import public "types.proto";

enum CallbackModel {
  IMMEDIATE = 0;
  EVOKED = 1;
}

message ConnectRequest {
    CallbackModel callback_model = 1;
    string local_settings = 2;
}
message ConnectResponse {
    
    enum ConnectResult {
        SUCCESS = 0;
        CONNECTION_FAILED = 1;
        UNSUPPORTED_CALLBACK_MODEL = 2;
        INVALID_LOCAL_SETTINGS_DESIGNATOR = 3;
        ALREADY_CONNECTED = 4;
        RTI_INTERNAL_ERROR = 5;
    }
    ConnectResult result = 1;
}

service ConnectService {
    rpc connect(ConnectRequest) returns (ConnectResponse);
}